lets_encrypted/kube-manifest/03-Ingress-Basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp2-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:  
  rules:
  - http:
      paths:
      - path: /app2/index.html
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-clusterip-service
            port: 
              number: 80
  tls:
  - hosts:
    - "172.176.124.23"
    secretName: letsencrypt-tls
